docs: аннотации Swagger
- Аннотация к методу me;
- Добавление аннотаций в контроллер товаров;
- Создание файлов с параметрами API и с ответами от эндпоинтов;
- Добавление схем для моделей пользователя и товара;
- Создание конфигурации для Swagger;
- Добавление deleted_at в таблицу товаров;
- Файл json для Swagger.
